[sc-8033] Avoid magic token to be burnt

--- a/apps/dashboard/src/app/invite/invite.component.html
+++ b/apps/dashboard/src/app/invite/invite.component.html
@@ -14,7 +14,7 @@
       <pa-input
         formControlName="password"
         type="password"
-        [errorMessages]="validationMessages['passowrd']">
+        [errorMessages]="validationMessages['password']">
         {{ 'login.password' | translate }}
       </pa-input>
       <pa-input
@@ -25,7 +25,7 @@
       </pa-input>
       <div class="setup-invite-actions">
         <pa-button type="submit">
-          {{ 'generic.go!' | translate }}
+          {{ 'generic.go' | translate }}
         </pa-button>
       </div>
     </form>
