Remove join button from magic component
This magic component is used for both account creation and invitations. Having a `join` button was not a problem for invitation, but it was not an option for regular account creation.
So we improved the error management flow of this step, and we put it back automatic.

--- a/libs/user/src/lib/magic/magic.component.html
+++ b/libs/user/src/lib/magic/magic.component.html
@@ -1,13 +1,3 @@
 <stf-user-container>
-  <div class="join-container">
-    <h2>
-      {{ 'invite.title' | translate }}
-    </h2>
-    <pa-button
-      kind="primary"
-      [disabled]="!token"
-      (click)="join()">
-      {{ 'invite.join-button' | translate }}
-    </pa-button>
-  </div>
+  <p>{{ (error ? error : 'onboarding.loading') | translate }}</p>
 </stf-user-container>
