[sc-7936] Rename API key roles

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-keys/knowledge-box-keys.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-keys/knowledge-box-keys.component.html
@@ -1,5 +1,5 @@
 <div class="knowledge-box-keys">
-  <h1>{{ 'stash.service_access' | translate }}</h1>
-  <div class="warning">{{ 'stash.service_access_description' | translate }}</div>
+  <h1>{{ 'api-key-management.title' | translate }}</h1>
+  <div class="warning">{{ 'api-key-management.description' | translate }}</div>
   <app-service-access></app-service-access>
 </div>
